--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Archive project files
-      run: tar czf project.tar.gz .
+      run: tar --warning=no-file-changed -czf project.tar.gz .
 
     - name: Upload to EC2
       uses: appleboy/scp-action@v0.1.4
