--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy Django via Docker Compose
+name: Build & Deploy to EC2
 
 on:
   push:
@@ -6,38 +6,31 @@ on:
 
 jobs:
   deploy:
+    name: Deploy Django App via Docker Compose
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Archive Code (Exclude .git and archive itself)
+    - name: Create SSH Key
       run: |
-        mkdir temp_project
-        rsync -av --exclude='.git' --exclude='temp_project' ./ temp_project/
-        tar -czf project.tar.gz -C temp_project .
-        rm -rf temp_project
+        mkdir -p ~/.ssh
+        echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
 
-    - name: Upload to EC2 via SCP
-      uses: appleboy/scp-action@v0.1.4
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        source: "project.tar.gz"
-        target: "~"
+    - name: Add SSH Host Key
+      run: |
+        ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Deploy on EC2 via SSH
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          rm -rf ~/ticketing-system
-          mkdir ~/ticketing-system
-          tar -xzf ~/project.tar.gz -C ~/ticketing-system
-          cd ~/ticketing-system
-          docker-compose down || true
-          docker-compose up --build -d
+    - name: Sync project to EC2
+      run: |
+        rsync -az --delete -e "ssh -i ~/.ssh/id_rsa" ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:${{ secrets.DEPLOY_PATH }}
+
+    - name: Deploy with Docker Compose
+      run: |
+        ssh -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
+          cd ${{ secrets.DEPLOY_PATH }}
+          docker compose down || true
+          docker compose up --build -d
+        EOF
