--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,31 @@ version: '3.9'
 
 services:
   web:
-    build: .
-    command: python3 manage.py runserver 0.0.0.0:8000
+    build:
+      context: .
+      dockerfile: dockerfile
+    container_name: django-app
+    command: >
+      bash -c "
+      python ssm_loader.py &&
+      python manage.py migrate &&
+      python manage.py collectstatic --noinput &&
+      python manage.py runserver 0.0.0.0:8000
+      "
     volumes:
       - .:/app
     ports:
       - "8000:8000"
-    env_file:
-      - .env.local
     depends_on:
       - db
+    environment:
+      AWS_DEFAULT_REGION: ap-south-1
+      AWS_SSM_PATH_PREFIX: /python-demo/
 
   db:
     image: postgres:15
+    container_name: postgres-db
+    restart: always
     environment:
       POSTGRES_DB: machine_test
       POSTGRES_USER: postgres
@@ -24,4 +36,3 @@ services:
 
 volumes:
   postgres_data:
-
