--- a/.env.local
+++ b/.env.local
@@ -2,7 +2,7 @@ SECRET_KEY='django-insecure-los=i(-+03la=2=(%6rs2hzfk#vw6kkt2#=j+@tff3b==_+i!'
 DEBUG=True
 ENVIRONMENT='local'
 
-DATABASE_NAME='machine_test'
+DB_NAME='machine_test_db'
 DATABASE_USER='postgres'
 DATABASE_PASSWORD='root'
 DATABASE_HOST='DB'
