--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ services:
     container_name: django-app
     command: >
       bash -c "
-        python3 ssm_loader.py &&
         python manage.py migrate &&
         python manage.py collectstatic --noinput &&
         python manage.py runserver 0.0.0.0:8000
@@ -20,9 +19,9 @@ services:
     depends_on:
       - db
     environment:
-      AWS_DEFAULT_REGION: ap-south-1   # Region for SSM access
-      AWS_SSM_PATH_PREFIX: /python-demo/   # Not used in export_env.sh but here for future use
- # Needed for EC2 IAM Role metadata access
+      AWS_REGION: ap-south-1
+    # Do NOT use network_mode: host — it breaks port binding
+    # Ensure your EC2 instance has IAM role attached to allow SSM access
 
   db:
     image: postgres:15
